new template XML and verification schema with xsd

--- a/data/xmltemplate.tmpl
+++ b/data/xmltemplate.tmpl
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<resources xmlns="http://biotoolsregistry.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://biotoolsregistry.org ../biotools-1.3.xsd">
+<resources xmlns="http://bio.tools" xmlns:xsi="http://www.w3.org/2001/XMLSchema" xmlns:altova="http://www.altova.com/xml-schema-extensions">
 	<resource>
         <name>$name</name>
         <homepage>$homepage</homepage>
